testsuite/tests/typecheck/should_fail/T21328.stderr

T21328.hs:11:8: error:
    Invalid instantiation of ‘withDict’ at type:
        Id (TypeRep a) -> (Typeable a => Int) -> Int
